JUnit für normales Maven 3.X fixen